--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,6 @@
 	path = modules/prompt/external/powerlevel10k
 	url = https://github.com/romkatv/powerlevel10k.git
 	shallow = true
+[submodule "modules/zsh-bd"]
+	path = modules/zsh-bd
+	url = https://github.com/Tarrasch/zsh-bd
